# n2f

./: .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  BLACK_FORMATTING.md  DOCUMENTATION_BUSINESS_LOGIC.md  FLAKE8_LINTING_SUMMARY.md  PRE_COMMIT_HOOKS.md  README.md  SETUP.md  TODO.md  WARP.md  analysis_output.txt  analysis_output2.txt  analysis_output3.txt  analysis_output4.txt  dev.yaml  example_metrics.json  metrics_20250829_140715.json  prod.yaml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  set_env.bat  set_env.ps1  setup.bat  setup.py  setup.sh  sync_n2f.bat  sync_n2f.sh  test_config.yaml  type_hints_analysis.txt  type_hints_progress_summary.txt
docs/: API_REFERENCE.md
python/: __init__.py  get-agresso-n2f-users.py  sync-agresso-n2f.py
scripts/: analyze_type_hints.py  check_markdown.py  fix_markdown.py  fix_markdown_advanced.py  fix_markdown_lists.ps1  format_code.py  test_real_data_sync.py
sql/: get-agresso-n2f-customaxes.dev.sql  get-agresso-n2f-customaxes.prod.sql  get-agresso-n2f-users.dev.sql  get-agresso-n2f-users.prod.sql  test-user copy.json  test-user.json  test.json
src/: __init__.py  sync-agresso-n2f.py  sync_agresso_n2f.py
tests/: README.md  __init__.py  clean_coverage.py  run_coverage_simple.py  run_tests.py  test_agresso_process.py  test_api_base.py  test_api_specific.py  test_business_axe.py  test_business_modules.py  test_business_user.py  test_cache.py  test_cache_simple.py  test_client_api.py  test_config.py  test_context.py  test_core_exceptions.py  test_core_memory_manager.py  test_core_registry_advanced.py  test_database.py  test_enhanced_simulation.py  test_exceptions.py  test_helper.py  test_integration.py  test_integration_fixed.py  test_metrics.py  test_n2f_api_role_userprofile.py  test_n2f_process_axe.py  test_n2f_process_axe_fixed.py  (+14 more)
(+118 files in other folders)
